# gdext-egui

./: .gitignore  Cargo.toml  README.md  gdext-egui.code-workspace
example/: README.md  Showcase.tscn  SpawnTest.tscn  ToolTest.tscn  godot-egui.gdextension  icon.svg.import  project.godot
example/.rust/: .gitignore  Cargo.toml  lib.rs  plugin.rs
src/: context.rs  lib.rs  lib.rs.old  painter.rs  surface.rs  widget.rs
src/context/: widget.rs
