[package]
name = "gdext-egui"
version = "0.1.0"
edition = "2021"

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
egui = "0.26"

itertools = "0.12"

rayon = "1"

crossbeam-queue = "0.3"
oneshot = "0.1"

tap = "1"

derive_setters = "0.1"
educe = "0.5"

with_drop = "0"
