[package]
name = "gdext-egui"
version = "0.2.0"
edition = "2021"

[workspace]
exclude = ["example/.rust"]

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", tag = "v0.2.2" }
egui = { version = "0.30" }

itertools = "0.14"

crossbeam-queue = "0.3"
oneshot = "0.1"

tap = "1"

derive_setters = "0.1"
educe = "0.6"

with_drop = "0"

open = "5"
