[package]
name = "gdext_egui_example"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "gdext_egui_example"
path = "lib.rs"

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
gdext-egui = { path = "../.." }

egui_demo_lib = { git = "https://github.com/emilk/egui.git", tag = "0.26.2" }

[patch.crates-io]
egui = { git = "https://github.com/emilk/egui.git", tag = "0.26.2" }

# [patch."https://github.com/godot-rust/gdext"]
# godot = { path = "gdext/godot" }
