[package]
name = "gdext_egui_example"
version = "0.1.0"
edition = "2021"

[workspace]

[lib]
crate-type = ["cdylib"]
name = "gdext_egui_example"
path = "lib.rs"

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", tag = "v0.2.2" }
gdext-egui = { path = "../.." }

egui_demo_lib = "0.30"
